# hfut-cs

./: .gitignore  LICENSE  README.md
term1/: README.md
term1/01_C++语言程序设计/课程设计/: 注意事项.md
term1/01_C语言程序设计/课程设计/: out.txt  生命游戏Demo.c
term1/01_Java语言程序设计/task01/: 作业1.doc
term1/01_Java语言程序设计/task02/: 作业2.doc
term1/01_Java语言程序设计/task03/: 作业3.doc
term1/01_Java语言程序设计/task04/: 作业4.doc
term1/01_Java语言程序设计/task05/: 作业5.doc
term1/01_Java语言程序设计/实验/: 《Java技术》实验报告模板.doc  《Java技术》实验指导书.doc  实验报告1.docx  实验报告2.docx  实验报告3.docx
term2/: README.md
term2/02_数据结构/数据结构作业/: 第10次作业.docx  第11次作业.docx  第1次作业.doc  第2次作业.doc  第4次作业.doc  第6次作业.doc  第7次作业.docx  第8次作业.docx
term2/02_数据结构/数据结构课设报告/: 数据结构课程设计报告.docx  数据结构课程设计报告（接雨水+图形化）.docx
term3/: README.md
term3/03_python程序设计/python课设/: Python程序设计报告大作业.docx  Python程序设计报告大作业（诗歌爬取）.docx
term3/03_数字电路/数字电路实验/: 实验1.docx  实验2.docx  实验3.docx  实验报告（2024年）.doc
term3/03_机器人技术/task01/: robotHomework01.cpp
term3/03_机器人技术/task02/: robotHomework02.cpp
term3/03_机器人技术/uva_base_v13.2/: AUTHORS  Doxyfile  Hfut_ReadMe  Makefile  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  libtool  mess.txt  start.bash  start.sh  uva_base_v13.2.kdev4
term3/03_机器人技术/uva_base_v13.2/src/: ActHandler.cpp  ActHandler.h  BasicCoach.cpp  BasicCoach.h  BasicPlayer.cpp  BasicPlayer.h  Connection.cpp  Connection.h  Formations.cpp  Formations.h  GenericValues.cpp  GenericValues.h  Geometry.cpp  Geometry.h  Logger.cpp  Logger.h  Makefile  Makefile.am  Makefile.in  Objects.cpp  Objects.h  Parse.cpp  Parse.h  Player.cpp  Player.h  PlayerSettings.cpp  PlayerSettings.h  PlayerTeams.cpp  SenseHandler.cpp  SenseHandler.h  ServerSettings.cpp  ServerSettings.h  SoccerTypes.cpp  SoccerTypes.h  WorldModel.cpp  WorldModel.h  WorldModelHighLevel.cpp  WorldModelPredict.cpp  WorldModelUpdate.cpp  formations.conf  (+5 more)
term3/03_机器人技术/uva_base_v13.2/src/.deps/: ActHandler.Po  BasicCoach.Po  BasicPlayer.Po  Connection.Po  Formations.Po  GenericValues.Po  Geometry.Po  Logger.Po  Objects.Po  Parse.Po  Player.Po  PlayerSettings.Po  PlayerTeams.Po  SenseHandler.Po  ServerSettings.Po  SoccerTypes.Po  WorldModel.Po  WorldModelHighLevel.Po  WorldModelPredict.Po  WorldModelUpdate.Po  main.Po  mainCoach.Po
term3/03_机器人技术/uva_base_v13.2/src/.kdev4/: src.kdev4
term4/: README.md
term5/: README.md
term5/05_CPU硬件设计/: CPU硬件设计报告.doc
term5/05_自然语言处理/: 自然语言处理实验报告.doc
term5/05_计算机体系结构/: 体系结构期末复习.md
term6/06_信息安全技术/: 信息安全技术PPT全总结 精华版.md  信息安全技术PPT全总结.md
term6/06_数据库/: 数据库实验报告.docx
term6/06_软件工程/: 软件工程作业电子版.docx  软件工程复习重点总结.md
term7/: README.md
term7/07_计算机专业工程实习与实训/: 计算机专业实习与实训报告.docx
term7/07_计算机网络课设/: 计算机网络课程设计报告.doc
term7/07_领域方向综合设计/: 领域方向综合设计报告.docx  领域方向综合设计报告模板.docx
(+660 files in other folders)
